// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sphere renders correctly when halved 1`] = `
<DocumentFragment>
  .cache-yta7ze {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-left: 16px solid #333;
  border-top: 16px solid #333;
  border-right: 16px solid #666;
  border-bottom: 16px solid #666;
  border-radius: 50%;
}

<span
    class="cache-yta7ze e1vp87o21"
    style="height: 32px; width: 32px;"
  />
</DocumentFragment>
`;

exports[`Sphere renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-9qr3ie {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-left: 16px solid #4F0599;
  border-top: 16px solid #4F0599;
  border-right: 16px solid #4F0599;
  border-bottom: 16px solid #4F0599;
  border-radius: 50%;
}

<span
    class="cache-9qr3ie e1vp87o21"
    style="height: 32px; width: 32px;"
  />
</DocumentFragment>
`;

exports[`Sphere renders correctly with one char and smaller 1`] = `
<DocumentFragment>
  .cache-lgms0z {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-left: 10px solid #000;
  border-top: 10px solid #000;
  border-right: 10px solid #000;
  border-bottom: 10px solid #000;
  border-radius: 50%;
}

.cache-b2bnvq {
  color: #fff;
  font-size: 10px;
}

<span
    class="cache-lgms0z e1vp87o21"
    style="height: 20px; width: 20px;"
  >
    <span
      class="cache-b2bnvq e1vp87o20"
    >
      ★
    </span>
  </span>
</DocumentFragment>
`;
